--- a/src/ss5/mangement_product/src/main/webapp/WEB-INF/views/product/list.html
+++ b/src/ss5/mangement_product/src/main/webapp/WEB-INF/views/product/list.html
@@ -16,8 +16,8 @@
 <div style="margin-left: 770px; margin-bottom: 50px">
  <a href="add.html" style="text-align: center">Add Product</a>
 </div>
-<form  class="text-center">
-    <input type="text" name="nameSearch" placeholder="Enter product name">
+<form action="/search" class="text-center">
+    <input type="text" name="nameSearch" placeholder="Enter product name" th:value="${nameSearch}">
     <button type="submit"class="btn btn-secondary btn-sm">Search</button>
 </form>
 
