--- a/src/ss6/blog/src/main/resources/templates/blog/view.html
+++ b/src/ss6/blog/src/main/resources/templates/blog/view.html
@@ -4,24 +4,26 @@
 <body>
 <h3>View blog</h3>
 <p>
-    <a th:href="@{/templates/blog}">
+    <a th:href="@{/blog/list}">
         Back to blog list
     </a>
 </p>
-<div id="detail">
-    <div class="name">
-        <label>Name:</label>
-        <label th:text="${blog.name}"></label>
-    </div>
-    <div class="price">
-        <label>price:</label>
-        <label th:text="${blog.price}"></label>
-    </div>
-    <div class="producer">
-        <label>Address:</label>
-        <label th:text="${blog.producer}"></label>
-    </div>
-</div>
+<div id="form">
+    <form th:action="@{/blog/view}" th:object="${viewBlog}" method="get">
+        <input type="hidden" th:field="*{id}"/>
+        <div>
+            <label>Name</label>
+            <input type="text" th:field="*{name}"/>
+        </div>
+        <div>
+            <label>price</label>
+            <input type="email" th:field="*{price}"/>
+        </div>
+        <div>
+            <label>Producer</label>
+            <input type="text" th:field="*{producer}"/>
+        </div>
+    </form>
 <footer th:replace="/blog/layout :: footer"></footer>
 </body>
 </html>
