--- a/src/ss8/validate_song_information/src/main/resources/templates/song/create.html
+++ b/src/ss8/validate_song_information/src/main/resources/templates/song/create.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<h2 th:if="${message}">
-    <span th:text="${message}"></span>
-</h2>
-<form action="/create" method="post" th:object="songDto">
-    <table>
-        <input type="hidden" th:field="*{id}">
+<h4 th:if="${message}">
+    <span style="text-align: center" th:text="${message}"></span>
+</h4>
+<div style="background: forestgreen; height: 350px;width: 350px; margin-left: 50px; margin-top: 50px" class="row g-3 align-items-center">
+<form th:action="@{/create}" method="post" th:object="${songDto}">
+    <table class="table-primary">
+        <h4>Create New Song</h4><br>
         <tr>
             <td>Title</td>
             <td>
-                <input type="text" th:field="*{title}">
-                <p style="clor:red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></p>
+                <input  type="text" th:field="*{title}">
+                <p style="clor:red" th:errors="*{title}"></p>
             </td>
         </tr>
 
@@ -23,7 +29,7 @@
             <td>Artist</td>
             <td>
                 <input type="text" th:field="*{artist}">
-                <p style="clor:red" th:if="${#fields.hasErrors('artist')}" th:errors="*{artist}"></p>
+                <p style="clor:red" th:errors="*{artist}"></p>
             </td>
         </tr>
 
@@ -31,15 +37,16 @@
             <td>Kind Of Music</td>
             <td>
                 <input type="text" th:field="*{kindOfMusic}">
-                <p style="clor:red" th:if="${#fields.hasErrors('kindOfMusic')}" th:errors="*{kindOfMusic}"></p>
+                <p style="clor:red"  th:errors="*{kindOfMusic}"></p>
             </td>
         </tr>
 
         <tr>
-            <td><input type="submit" value="Save"></td>
+            <td><input  type="submit" class="btn btn-primary" value="Save"></td>
         </tr>
     </table>
-
 </form>
+    <a href="/" style="text-align: center; color: black">Back to list</a>
+</div>
 </body>
 </html>
