--- a/src/ss8/validate_song_information/src/main/resources/templates/song/list.html
+++ b/src/ss8/validate_song_information/src/main/resources/templates/song/list.html
@@ -10,10 +10,11 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+<h1 style="text-align: center">List Song</h1>
 <h2 th:if="${message}">
     <span th:text="${message}"></span>
 </h2>
-<a href="/create">Add new song</a>
+<a style="font-size: 20px" href="/create">Add new song</a>
 <table class="table">
     <thead class="table-light">
     <tr>
@@ -30,9 +31,27 @@
         <td th:text="${song.title}"></td>
         <td th:text="${song.artist}"></td>
         <td th:text="${song.kindOfMusic}"></td>
-        <td>Edit</td>
+        <!--        <td><a th:href="@{/edit(id=${song.id})}">Edit</a></td> (dùng @requestparam)-->
+        <!--        <td><a th:href="@{/edit/__${song.id}__}">Edit</a></td>-->
+        <td><a th:href="@{/edit/{id}/(id=${song.id})}">Edit</a></td>
     </tr>
     </tbody>
 </table>
+
+<div class="d-flex justify-content-end ">
+    <ul class="pagination">
+        <li class="page-item disabled" th:if="${songs.number == 0}">
+            <a class="page-link" href="">Previous</a>
+        </li>
+        <li class="page-item" th:if="${songs.number > 0}">
+            <a class="page-link"
+               th:href="@{/(page=${songs.number - 1})}">Previous</a>
+        <li class="page-item" th:if="${songs.number < songs.totalPages - 1}">
+            <a class="page-link"
+               th:href="@{/(page=${songs.number + 1})}">Next</a>
+        </li>
+    </ul>
+</div>
+</div>
 </body>
 </html>
