--- a/src/ss9/library_management/src/main/resources/templates/book/error.html
+++ b/src/ss9/library_management/src/main/resources/templates/book/error.html
@@ -6,11 +6,6 @@
 </head>
 <body>
 <h3>Notification</h3>
-<p>
-    <a href="/">
-        Back to Library Page
-    </a>
-</p>
 
 <div class="notify">
     <div th:if="${message}">
@@ -18,6 +13,6 @@
     </div>
 </div>
 
-<a href="/">OK</a>
+<a href="/">Back to Library Page</a>
 </body>
 </html>
