--- a/src/ss9/library_management/src/main/resources/templates/book/oder_form.html
+++ b/src/ss9/library_management/src/main/resources/templates/book/oder_form.html
@@ -8,14 +8,20 @@
             crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        #form {
+            width: 500px;
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+    </style>
 </head>
 <body>
 <div id="form">
-    <form th:action="@{/order}" method="post" th:object="${book}">
-        <h3>Confirmed to borrow book:
-            <input type="text" th:field="*{title}">
+    <form action="/book/order" method="POST" novalidate="novalidate">
+        <input type="hidden" name="id" th:value="${book.id}"/>
+        <h3>Confirmed to borrow book: <strong color="green" th:text="${book.title}"></strong>?
         </h3>
-
         <a href="/">Cancel</a>
         <button type="submit">Confirm</button>
     </form>
