--- a/src/ss10/product_cart/src/main/resources/templates/views/cart.html
+++ b/src/ss10/product_cart/src/main/resources/templates/views/cart.html
@@ -1,37 +1,100 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head th:replace="/bootstrap_layout :: head">
+    <link rel="stylesheet" href="../cart_css.css">
 </head>
+
 <body>
-<table class="table" th:if="${cart !=null && cart.getProducts().size()>0}">
-    <thead class="table-light">
-    <tr>
-        <th>Name</th>
-        <th>Img</th>
-        <th>Price</th>
-        <th>Quantity</th>
-    </tr>
-    </thead>
+<div class="container-xl" style="margin-top: 50px">
+    <div class="table-title">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2>Phone <b>Shopping</b></h2>
+            </div>
+            <div class="col-sm-6">
+                <form action="" novalidate="novalidate">
+                    <div class="search-box">
+                        <input type="text" name="otp" placeholder="..Search..&hellip;">
+                    </div>
+                    <button class="btn btn-success" type="submit">Search<i
+                            class="material-icons">&#xE8B6;</i>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <tbody>
-    <tr th:each="products: ${cart.products}">
-        <td th:text="${products.key.name}">Hoodie</td>
-        <td>
-            <a><img th:src="${products.key.imageUrl}" height="200" width="150"></a>
-        </td>
-        <td th:text="${products.key.price}">100000</td>
-        <td th:text="${products.value}">10</td>
-    </tr>
-    </tbody>
-<div class="alert alert-warning" role="alert" th:if="${cart==null || cart.getProducts().size() == 0}"> Cart Empty</div>
+<div class="container px-3 my-5 clearfix">
+    <!-- Shopping cart table -->
+    <div class="card">
+        <div class="card-header">
+            <h2>Your Cart</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered m-0" th:if="${cart != null && cart.products.size() > 0}">
+                    <thead>
+                    <tr>
+                        <!-- Set columns width -->
+                        <th class="text-center py-3 px-4" style="min-width: 400px;">Product Name &amp; Details</th>
+                        <th class="text-right py-3 px-4" style="width: 100px;">Price</th>
+                        <th class="text-center py-3 px-4" style="width: 120px;">Quantity</th>
+                        <th class="text-right py-3 px-4" style="width: 100px;">Total</th>
+                        <th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#" class="shop-tooltip float-none text-light" title="" data-original-title="Clear cart"><i class="ino ion-md-trash"></i></a></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <div th:each="entry:${cart.products}">
+                        <tr>
+                            <td class="p-4">
+                                <div class="media align-items-center">
+                                    <img th:src="${entry.key.imageUrl}" class="d-block ui-w-40 ui-bordered mr-4" alt="">
+                                    <div class="media-body">
+                                        <a th:href="@{/{id}/details(id=${entry.key.id})}" class="d-block text-dark">
+                                            <span th:text="${entry.key.name}"></span>
+                                        </a>
+                                        <small>
+                                            <span class="text-muted" th:text="${entry.key.description}"></span>
+                                            <span class="text-muted" th:text="'Discount: ' + ${entry.key.discount} + '%'"></span>
+                                        </small>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="text-right font-weight-semibold align-middle p-4" th:text="${entry.key.price}"></td>
+                            <td class="align-middle p-4"><input type="number" class="form-control text-center" th:value="${entry.value}"
+                                                                th:onchange=""></td>
+                            <td class="text-right font-weight-semibold align-middle p-4" th:text="${entry.key.price * entry.value}"></td>
+                            <td class="text-center align-middle px-0"><a th:href="@{/cart/{id}/remove(id=${entry.key.id})}" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">Remove</a></td>
+                        </tr>
+                    </div>
+                    </tbody>
+                </table>
+            </div>
+            <!-- / Shopping cart table -->
 
-</table>
+            <div class="d-flex flex-wrap justify-content-between align-items-center pb-4">
+                <div class="mt-4">
+                    <label class="text-muted font-weight-normal">Promocode</label>
+                    <input type="text" placeholder="ABC" class="form-control">
+                </div>
+                <div class="d-flex">
+                    <div class="text-right mt-4">
+                        <label class="text-muted font-weight-normal m-0">Total price</label>
+                        <div class="text-large"><strong th:text="${cart.getTotalPrice()}"></strong></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="float-right">
+                <a type="button" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3"
+                   href="/">Back to shopping</a>
+                <button type="button" class="btn btn-lg btn-primary mt-2">Checkout</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
