--- a/src/ss10/product_cart/src/main/resources/templates/views/details.html
+++ b/src/ss10/product_cart/src/main/resources/templates/views/details.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="/bootstrap_layout :: head">
+    <link rel="stylesheet" href="../cart_css.css">
 </head>
+
 <body>
+<div class="container-xl" style="margin-top: 50px">
+    <div class="table-title">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2>Phone <b>Shopping</b></h2>
+            </div>
+            <div class="col-sm-6">
+                <form action="" novalidate="novalidate">
+                    <div class="search-box">
+                        <input type="text" name="otp" placeholder="..Search..&hellip;">
+                    </div>
+                    <button class="btn btn-success" type="submit">Search<i
+                            class="material-icons">&#xE8B6;</i>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container px-3 my-5 clearfix">
+    <div class="card">
+        <div class="card-header">
+            <h2>Product Details</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered m-0">
+                    <thead>
+                    <tr>
+                        <!-- Set columns width -->
+                        <th class="text-center py-3 px-4" style="min-width: 400px;">Product Name &amp; Details</th>
+                        <th class="text-center py-3 px-4" style="width: 120px;">Discount</th>
+                        <th class="text-center py-3 px-4" style="width: 100px;">Price</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td class="p-4">
+                            <div class="media align-items-center">
+                                <img th:src="@{${product.imageUrl}}" class="d-block ui-w-40 ui-bordered mr-4" alt="">
+                                <div class="media-body">
+                                    <span th:text="${product.name}"></span>
+                                    <small>
+                                        <p class="text-muted" th:text="${product.description}"></p>
+                                    </small>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="text-center font-weight-semibold align-middle p-4"
+                            th:text="${product.discount}"></td>
+                        <td class="text-center font-weight-semibold align-middle p-4" th:text="${product.price}"></td>
+                        <td><a type="button" class="btn btn-warning mt-4 text-white"
+                               th:href="@{/{id}/add(id=${product.id})}">
+                            <i class="icon-cart-add mr-2"></i> Add to cart</a></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="float-right">
+                <a type="button" class="btn btn-lg btn-primary mt-2"
+                   href="/">Back to shopping</a>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
