--- a/src/case_study4/src/main/resources/templates/customer/list.html
+++ b/src/case_study4/src/main/resources/templates/customer/list.html
@@ -3,9 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    <style>
+        body {
+            background: url("https://bit.ly/3iE7las");
+            background-size: cover;
+        }
+
+        header {
+            width: 100%;
+        }
+
+        header .left-header img {
+            width: 40px;
+            height: 80px;
+            margin: 5px 5px 5px 40px;
+            float: left;
+        }
+
+        header .right-header h3 {
+            float: right;
+        }
+
+        header .left-header {
+            float: left;
+            width: 20%;
+        }
+
+        header .right-header {
+            float: right;
+            width: 20%;
+        }
+
+        header .mid-header {
+            text-align: center;
+            float: left;
+            width: 60%;
+        }
+
+        .navbar ul li a {
+            font-weight: bold;
+            color: #4b4b2e !important;
+        }
+
+        .navbar ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .menu {
+            clear: left;
+            float: left;
+            width: 100%;
+        }
+
+        .body-mid .body-mid-left {
+            clear: left;
+            float: left;
+            width: 20%;
+            min-height: 100%;
+        }
+
+        .body-mid .body-mid-right {
+            float: left;
+            width: 100%;
+        }
+
+        .body-mid .body-mid-right img {
+            width: 100%;
+        }
+
+        footer {
+            clear: left;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
-<table>
+<h2 style="text-align: center">Customer List</h2>
+
+<div class="menu">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(212,212,212,0.26)">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/employees">Employees</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/customers">Customer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/facility">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/booking">Booking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/contract">Contract</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/customers/create">Add New Customer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/contract/use-facility">Customer Using
+                            Facility</a>
+                    </li>
+                </ul>
+                <form action="/customers">
+                    <input type="text" name="nameSearch" placeholder="Search name">
+                    <input type="text" name="email" placeholder="Search email">
+                    <select name="customerType">
+                        <option value="" selected>Type</option>
+                        <option th:each="item: ${customerTypes}" th:value="${item.id}"
+                                th:text="${item.name}"></option>
+                    </select>
+                    <input type="submit" value="Search">
+                </form>
+            </div>
+        </div>
+    </nav>
+</div>
+
+<table class="table table-white" style="text-align: center" border="1">
     <thead>
     <tr>
         <th>STT</th>
@@ -27,7 +157,7 @@
             <td th:text="${status.count}"></td>
             <td th:text="${customer.customerTypeId.name}"></td>
             <td th:text="${customer.getName()}"></td>
-            <td th:text="${customer.getDateOfBirth()"></td>
+            <td th:text="${customer.getDateOfBirth()}"></td>
 
             <td>
                 <p th:if="${customer.gender == 0}">Female </p>
@@ -35,52 +165,60 @@
                 <p th:if="${customer.gender == 2}">LGBT </p>
             </td>
             <td th:text="${customer.getIdCard()}"></td>
-            <td th:text="${customer.phoneNumber()}"></td>
+            <td th:text="${customer.getPhoneNumber()}"></td>
             <td th:text="${customer.getEmail()}"></td>
             <td th:text="${customer.getAddress()}"></td>
-            <td>Edit</td>
+            <td><a class="btn btn-danger" th:href="@{/customers/edit/__${customer.id}__}">Edit</a></td>
             <td>
-                <button type="button" th:onclick="|getIdToDelete('${blog.id}')|" class="btn btn-primary"
-                        data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    DELETE
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete"
+                        th:attr="onclick=|infoDelete('${customer.id}', '${customer.name}')|">
+                    Delete
                 </button>
-                Delete
             </td>
         </tr>
     </tbody>
 </table>
 
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
+<div class="modal fade " id="delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+     style="color: white">
+    <div class="modal-dialog ">
+        <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="#" th:action="@{/blog/delete}" novalidate="novalidate">
-                    <p>Do you want to delete :</p>
-                    <div>
-                        <div class="input-group flex-nowrap">
-                            <span class="input-group-text" id="addon-wrapping1">Id</span>
-                            <input type="text" readonly class="form-control" id="idDelete" name="id">
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-success" data-bs-dismiss="modal">CLOSE</button>
-                        <button type="submit" class="btn btn-outline-danger">DELETE</button>
-                    </div>
+                Bạn có muốn xóa <strong class="text-danger" id="nameDelete"></strong>
+            </div>
+            <div class="modal-footer">
+                <form action="/customers/delete">
+                    <input type="text" name="id" id="id" hidden>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button class="btn btn-danger" type="submit">Delete</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
+
+<div>
+    <a th:href="@{'/customers'(page=${customers.number - 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"
+       th:if="${customers.hasPrevious()}">
+        <button type="button" class="btn btn-secondary">Previous</button>
+    </a>
+    <span th:text="${customers.number+1}"></span> / <span th:text="${customers.totalPages}"></span>
+    <a th:href="@{'/customers'(page=${customers.number + 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"
+       th:if="${customers.hasNext()}">
+        <button type="button" class="btn btn-secondary">Next</button>
+    </a>
+    <th:block th:if="${message}">
+        <p style="text-align: center" th:text="${message}"></p>
+    </th:block>
+</div>
 <script>
-    // <%--    thêm value cho thẻ input--%>
-    function getIdToDelete(id, name) {
-        document.getElementById("idDelete").value = id;
-        document.getElementById("nameDelete").value = name;
+    function infoDelete(id, name) {
+        document.getElementById("nameDelete").innerText = name;
+        document.getElementById("id").value = id;
     }
 </script>
 </body>
