--- a/src/case_study4/src/main/resources/templates/home.html
+++ b/src/case_study4/src/main/resources/templates/home.html
@@ -68,10 +68,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/employees">Employees</a>
+                        <a class="nav-link active" aria-current="page" href="/">Employees</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/customer">Customer</a>
+                        <a class="nav-link active" aria-current="page" href="/customers">Customer</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/facility">Service</a>
