--- a/src/case_study4/src/main/resources/templates/customer/edit.html
+++ b/src/case_study4/src/main/resources/templates/customer/edit.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<a href="/customers">Back to customer list</a>
 <div style="text-align: center">
     <th:block th:if="${message}">
         <p style="color: red;font-weight: bold" th:text="${message}"></p>
@@ -81,6 +80,8 @@
                     <p style="color: red" th:errors="*{address}" th:if="${#fields.hasErrors('name')}"> </p>
                 </div>
                 <button type="submit" class="btn btn-primary mb-3 w-100">Update Customer</button>
+                <button class="btn bg-warning mb-3 w-100"><a style="color: black ;text-align: center;text-decoration: none"
+                                                             href="/customers">Back to customer list</a></button>
             </form>
         </div>
 
