--- a/src/case_study4/src/main/resources/templates/customer/edit.html
+++ b/src/case_study4/src/main/resources/templates/customer/edit.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>create customer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        body {
+            background: url("https://bit.ly/3iE7las");
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
 <div style="text-align: center">
@@ -16,7 +22,7 @@
     <div class="row">
         <div class="col-lg-3"></div>
 
-        <div style="background: lightblue" class="col-lg-6 shadow-lg">
+        <div style="background: lightgreen" class="col-lg-6 shadow-lg">
             <form action="/customers/edit"  method="post" th:object="${customerDTO}">
                 <input th:field="*{id}" hidden>
                 <div class="mb-5 mt-3 text-center fst-italic">
